:bug: Fix combobox dropdown visibility when no options are provided (#9753)

--- a/frontend/src/app/main/ui/ds/controls/combobox.scss
+++ b/frontend/src/app/main/ui/ds/controls/combobox.scss
@@ -46,7 +46,7 @@
 
 .focused {
   --combobox-outline-color: var(--color-accent-primary);
-  --combobox-bg-color: var(--color-background-secondary);
+  --combobox-bg-color: var(--color-background-primary);
 }
 
 .arrow {
